--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <div>
         <h3>Conservation Status</h3>
-        <img src="" id="imgHover4" id="imgHover4" onmouseover="imagehover4()">
+        <img src="https://npr.brightspotcdn.com/dims4/default/b592f6f/2147483647/strip/true/crop/1800x945+0+128/resize/1200x630!/quality/90/?url=http%3A%2F%2Fnpr-brightspot.s3.amazonaws.com%2Ff6%2F23%2F001849ae45a9bf2f8c6807862ce6%2F090420-provided-blackbear.jpg" id="imgHover4" id="imgHover4" onmouseover="imagehover4()">
         <br>
         <button onclick="show3()" ondblclick="hide3()">Show/Hide</button>
         <p id="p3"></p>
